csv with reflection